k8/workload/address.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-kube
  name: address
  labels:
    app: address
spec:
  type: NodePort
  ports:
    - port: 8081
      nodePort: 31000
  selector:
    app: address
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev-kube
  name: address
spec:
  selector:
    matchLabels:
      app: address
  replicas: 1
  template:
    metadata:
      labels:
        app: address
    spec:
      containers:
        - name: address
          image: address:v1
          ports:
            - containerPort: 8081
