k8/workload/user.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-kube
  name: user
  labels:
    app: user
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31001
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev-kube
  name: user
spec:
  selector:
    matchLabels:
      app: user
  replicas: ${POD}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
